--- a/Prevu.Synoptics.V2868-Termoplasticos/D464.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/D464.xaml
@@ -125,16 +125,7 @@
                 </TransformGroup>
             </Machines:V01_CV_ValveDouble.RenderTransform>
         </Machines:V01_CV_ValveDouble>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="44" Canvas.Top="85">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="44" Canvas.Top="85"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="464-03-PT1" Canvas.Left="74" Canvas.Top="26"/>
