--- a/Prevu.Synoptics.V2868-Termoplasticos/OverallView.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/OverallView.xaml
@@ -11,10 +11,187 @@
              lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
-             >
+             d:Background="{DynamicResource MaterialDesignPaper}" >
 
     <Canvas Height="2950" Width="8050">
-        
-
+        <Labels:Pipe Canvas.Left="3788" Canvas.Top="797" PipeHeight="Medium" Width="1084" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA8">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5520" Canvas.Top="1869" Width="736" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="529-01-MA1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5839" Canvas.Top="1503" Width="51" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="529-01-MA1"/>
+        <Labels:Pipe Canvas.Left="2661" Canvas.Top="1409" PipeHeight="Medium" Width="241" StatusComponent="233-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5739" Canvas.Top="2247" PipeHeight="Medium" Width="241" StatusComponent="492-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5739" Canvas.Top="876" PipeHeight="Medium" Width="241" StatusComponent="482-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4088" Canvas.Top="1412" PipeHeight="Medium" Width="517" StatusComponent="430-01-MA8" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4088" Canvas.Top="1335" PipeHeight="Medium" Width="247" StatusComponent="430-01-MA8" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4325" Canvas.Top="259" PipeHeight="Medium" Width="274" StatusComponent="430-01-MA8" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6726" Canvas.Top="1393" PipeHeight="Medium" Width="332" StatusComponent="534-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6734" Canvas.Top="2764" PipeHeight="Medium" Width="208" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6932" Canvas.Top="1709" PipeHeight="Medium" Width="225" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4487" Canvas.Top="1520" PipeHeight="Medium" Width="226" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA8" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="6405" Canvas.Top="2237" PipeHeight="Medium" Width="1064" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="6920" Canvas.Top="1521" PipeHeight="Medium" Width="266" RenderTransformOrigin="0.5,0.5" StatusComponent="534-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5845" Canvas.Top="2306" Width="86" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5768" Canvas.Top="2390" Width="90" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5811" Canvas.Top="2347" Width="79" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4142" Canvas.Top="1744" Width="160" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="4220" Canvas.Top="1822" Width="437" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="3982" Canvas.Top="924" Width="948" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="460-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="4454" Canvas.Top="451" Width="187" Color="Water" StatusComponent="460-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4384" Canvas.Top="1502" Width="144" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="460-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="4230" Canvas.Top="1572" Width="228" Color="Water" StatusComponent="460-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2366" Canvas.Top="1841" Width="826" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="2028" Canvas.Top="2252" Width="753" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2521" Canvas.Top="1138" Width="516" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="2492" Canvas.Top="882" Width="289" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4012" Canvas.Top="2058" Width="126" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="3998" Canvas.Top="1997" Width="79" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2791" Canvas.Top="2119" Width="1286" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2235" Canvas.Top="2119" Width="531" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2054" Canvas.Top="1938" Width="366" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="892" Canvas.Top="1855" Width="202" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="991" Canvas.Top="1756" Width="1248" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <local:P020 Canvas.Left="34" Canvas.Top="39" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True" />
+        <local:P230 Canvas.Left="1178" Canvas.Top="656" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P288 Canvas.Left="558" Canvas.Top="1850" d:IsLocked="True"/>
+        <local:P430 Canvas.Left="2804" Canvas.Top="1206" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P464 Canvas.Left="4423" Canvas.Top="182" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P474 Canvas.Left="4423" Canvas.Top="1553" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P510 Canvas.Left="5625" Canvas.Top="810" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P520 Canvas.Left="5625" Canvas.Top="2181" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P570 Canvas.Left="6840" Canvas.Top="1524" d:IsLocked="True"/>
     </Canvas>
 </UserControl>
