--- a/Prevu.Synoptics.V2868-Termoplasticos/P230.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/P230.xaml
@@ -12,6 +12,36 @@
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
+        <Labels:Pipe Color="ByProduct" Width="74" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="423" Canvas.Top="427" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform />
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="ByProduct" Width="72" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="424" Canvas.Top="498" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="421" Canvas.Top="567" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform />
+                    <SkewTransform/>
+                    <RotateTransform Angle="90.1"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="951" Canvas.Top="483" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Color="Water" Width="116" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="895" Canvas.Top="535" Icon="Left" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
@@ -57,7 +87,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="431" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="817" Canvas.Top="725" />
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="817" Canvas.Top="427" />
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="103" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" PipeHeight="Medium" Canvas.Left="1370" Canvas.Top="753" />
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="295" RenderTransformOrigin="0.5,0.5" StatusComponent="210-02-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="572" Canvas.Top="204"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="312" RenderTransformOrigin="0.5,0.5" StatusComponent="210-02-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="555" Canvas.Top="204"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="172" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="733" Canvas.Top="507" Icon="Left" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -111,49 +141,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" PipeHeight="Medium" Height="20" VisibilityComponent="" VisibilitySignal="" Canvas.Left="82" Canvas.Top="123"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="122" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="400" Canvas.Top="446" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="160" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="381" Canvas.Top="590" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="94" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="414" Canvas.Top="714" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="322" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-71-ECS1" Canvas.Left="144" Canvas.Top="396" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="174" RenderTransformOrigin="0.5,0.5" StatusComponent="210-71-ECS1" Canvas.Left="133" Canvas.Top="351" Icon="Right"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="210-25-CV1" Canvas.Left="303" Canvas.Top="561"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="137" RenderTransformOrigin="0.5,0.5" StatusComponent="208-01-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="254" Canvas.Top="204"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="282" RenderTransformOrigin="0.5,0.5" StatusComponent="210-71-ECS1" Canvas.Left="133" Canvas.Top="260" Icon="Right"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="154" RenderTransformOrigin="0.5,0.5" StatusComponent="208-01-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="254" Canvas.Top="204"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="172" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="1117" Canvas.Top="141">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -165,8 +154,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="413" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="792" Canvas.Top="57"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="361" RenderTransformOrigin="0.5,0.5" StatusComponent="210-21-CV1" Canvas.Left="396" Canvas.Top="47" Icon="Left"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="173" RenderTransformOrigin="0.5,0.5"    StatusComponent="210-21-CV1" Canvas.Left="312" Canvas.Top="141">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="351" RenderTransformOrigin="0.5,0.5" StatusComponent="210-21-CV1" Canvas.Left="406" Canvas.Top="47" Icon="Left"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="173" RenderTransformOrigin="0.5,0.5"    StatusComponent="210-21-CV1" Canvas.Left="322" Canvas.Top="141">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -176,7 +165,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="105" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-71-ECS1" Canvas.Left="303" Canvas.Top="237" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:V01_MU_Grinder Canvas.Left="778" Canvas.Top="168" Height="244" Width="206" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="661" Canvas.Top="548" >
             <Machines:CV_Valve_001.RenderTransform>
@@ -191,33 +179,11 @@
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="38" Width="50" Canvas.Left="1066" Canvas.Top="209"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Width="144" Canvas.Left="144" Canvas.Top="199"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1114" Canvas.Top="525" Height="158" Width="158" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_STCN_PrewashReactor_w2Screw_ExtrctionBelt Canvas.Left="378" Canvas.Top="191" Height="220" Width="209" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="1220" Canvas.Top="658" Width="175" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:Waste HorizontalAlignment="Left"  VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="430" Canvas.Top="729"/>
-        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="445" Canvas.Top="501" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
-            <Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-        </Machines:V01_CV_ValvolaGhigliottina>
-        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="445" Canvas.Top="661" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
-            <Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-        </Machines:V01_CV_ValvolaGhigliottina>
-        <Border BorderThickness="1" HorizontalAlignment="Left" Height="105" VerticalAlignment="Center" Width="56" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="432" Canvas.Top="540" />
+        <Machines:V01_STCN_PrewashReactor_w1Screw_ExtrctionBelt Canvas.Left="396" Canvas.Top="189" HorizontalAlignment="Left" Height="220" VerticalAlignment="Center"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="38" Width="50" Canvas.Left="752" Canvas.Top="40"/>
-        <Rectangle HorizontalAlignment="Left" Height="110" Stroke="Black" VerticalAlignment="Center" Width="2" StrokeThickness="2" Canvas.Left="133" Canvas.Top="301" />
-        <Machines:External HorizontalAlignment="Left" Height="70" VerticalAlignment="Center" Width="76" RenderTransformOrigin="0.5,0.5" Canvas.Left="92" Canvas.Top="398" >
+        <Rectangle HorizontalAlignment="Center" Height="110" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2" Canvas.Left="133" Canvas.Top="252" />
+        <Machines:External HorizontalAlignment="Center" Height="70" VerticalAlignment="Top" Width="76" RenderTransformOrigin="0.5,0.5" Canvas.Left="96" Canvas.Top="335" >
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -227,6 +193,11 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
+        <Machines:SCW_ScrewConveyor_straight Canvas.Left="871" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight Canvas.Left="995" Canvas.Top="480" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:Waste Height="60" Width="62" Canvas.Left="429" Canvas.Top="571" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="365" Canvas.Top="454" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="365" Canvas.Top="523" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="230-21-CV1" 
@@ -263,35 +234,31 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="233-01-MA1" Canvas.Left="1392" Canvas.Top="614" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="210-01-MA1" Canvas.Left="419" Canvas.Top="144"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="210-02-MA1" Canvas.Left="536" Canvas.Top="144"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="210-22-CV1" Canvas.Left="516" Canvas.Top="438" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="210-23-CV1" Canvas.Left="516" Canvas.Top="600" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="210-01-MA1" Canvas.Left="419" Canvas.Top="143"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="210-02-MA1" Canvas.Left="536" Canvas.Top="143"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
             ComponentName="210-71-ECS1" Canvas.Left="158" Canvas.Top="288"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Center" 
             ComponentName="208-01-MA1" Canvas.Left="235" Canvas.Top="143"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="210-71-ECS3" Canvas.Left="30" Canvas.Top="304"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="210-71-ECS3" Canvas.Left="30" Canvas.Top="288"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="210-21-CV1" Canvas.Left="733" Canvas.Top="80"/>
         <Labels:DeviceLabel 
-            ComponentName="210-DISCHARGE" Canvas.Left="516" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel 
             ComponentName="234-01-MA1" Canvas.Left="1139" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Machines:SCW_ScrewConveyor_straight Canvas.Left="871" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Canvas.Left="995" Canvas.Top="480" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel 
+            ComponentName="210-22-CV1" Canvas.Left="489" Canvas.Top="441" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel 
+            ComponentName="210-23-CV1" Canvas.Left="489" Canvas.Top="510" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel 
+            ComponentName="210-DISCHARGE" Canvas.Left="489" Canvas.Top="576" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
