--- a/Prevu.Synoptics.V2868-Termoplasticos/P520.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/P520.xaml
@@ -62,11 +62,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="58" VerticalAlignment="Top" Canvas.Top="712" StatusComponent="574-01-MA1" Canvas.Left="961" HorizontalAlignment="Center" Color="Air"/>
         <Labels:Pipe Width="73" VerticalAlignment="Top" Canvas.Top="428" StatusComponent="524-01-MA1" PipeHeight="Medium" Canvas.Left="697" HorizontalAlignment="Center"/>
         <Labels:Pipe Width="66" VerticalAlignment="Top" Canvas.Top="428" StatusComponent="520-01-MA1" PipeHeight="Medium" Canvas.Left="610" HorizontalAlignment="Center"/>
-        <Labels:Pipe Width="268" VerticalAlignment="Top" Canvas.Top="581" StatusComponent="564-01-MA1" PipeHeight="Medium" Canvas.Left="793" Height="14" HorizontalAlignment="Center"/>
-        <Labels:Pipe Width="58" VerticalAlignment="Top" Canvas.Top="586" StatusComponent="564-01-MA1" Canvas.Left="679" HorizontalAlignment="Center" Color="Air"/>
+        <Labels:Pipe Width="290" VerticalAlignment="Center" Canvas.Top="581" StatusComponent="544-01-MA1" PipeHeight="Medium" Canvas.Left="793" Height="14" HorizontalAlignment="Left"/>
+        <Labels:Pipe Width="58" VerticalAlignment="Top" Canvas.Top="586" StatusComponent="544-01-MA1" Canvas.Left="679" HorizontalAlignment="Center" Color="Air"/>
         <Labels:Pipe Width="142" VisibilitySignal="" VerticalAlignment="Top" Canvas.Top="494" StatusComponent="524-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="694" Height="12" HorizontalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -77,18 +76,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="213" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="221" Canvas.Top="258"/>
-        <Labels:Pipe Width="290" VerticalAlignment="Top" Canvas.Top="708" StatusComponent="574-01-MA1" PipeHeight="Medium" Canvas.Left="1083" Height="14" HorizontalAlignment="Center"/>
-        <Labels:Pipe Width="116" VisibilitySignal="" VerticalAlignment="Top" Canvas.Top="638" StatusComponent="564-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="998" Height="12" HorizontalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="213" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="221" Canvas.Top="258"/>
         <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="542" Canvas.Top="172">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -132,13 +120,10 @@
         </Rectangle>
         <Machines:DRY_HeatingBattery Width="66" VerticalAlignment="Top" Canvas.Top="556" Canvas.Left="634" Height="65" HorizontalAlignment="Center"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="664" Canvas.Top="408" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:DRY_HeatingBattery Height="65" Width="66" Canvas.Left="916" Canvas.Top="682" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="953" Canvas.Top="563" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1247" Canvas.Top="690" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="914" Canvas.Top="187" Height="50" Width="50"  HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="414" Canvas.Top="172" HorizontalAlignment="Left" VerticalAlignment="Center" Width="222"/>
         <Machines:V01_DRY_DryerShutOff Canvas.Left="718" Canvas.Top="535" Height="71" Width="96" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_DRY_DryerShutOff Canvas.Left="1009" Canvas.Top="661" Height="71" Width="96" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Center" 
 		ComponentName="520-01-MA1"  Canvas.Left="649" Canvas.Top="229"/>
@@ -170,16 +155,12 @@
 		VerticalAlignment="Center" 
 		ComponentName="520-02-MA1"  Canvas.Left="756" Canvas.Top="297"/>
         <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="469"  Canvas.Left="644" HorizontalAlignment="Center" ComponentName="524-01-MA1"/>
-        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="933" HorizontalAlignment="Center" ComponentName="564-01-MA1"/>
-        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="811" HorizontalAlignment="Center" ComponentName="560-21-CV1" RenderTransformOrigin="0.567,0.54"/>
-        <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="632" Canvas.Left="1230" HorizontalAlignment="Left" ComponentName="574-01-MA1"/>
-        <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="632" Canvas.Left="1108" HorizontalAlignment="Left" ComponentName="570-21-CV1"/>
-        <Labels:DetailsLabel VerticalAlignment="Top" Canvas.Top="624" Canvas.Left="641" HorizontalAlignment="Center" DetailsPageName="D560" ComponentName="560-DRY"/>
-        <Labels:DetailsLabel ComponentName="570-DRY" DetailsPageName="D570" Canvas.Left="923" Canvas.Top="750" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="574-01-MA1" 
-            JumpToLabel="658-01-MA1" Canvas.Left="1362" Canvas.Top="679"/>
+        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="933" HorizontalAlignment="Center" ComponentName="544-01-MA1"/>
+        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="811" HorizontalAlignment="Center" ComponentName="540-21-CV1" RenderTransformOrigin="0.567,0.54"/>
+        <Labels:DetailsLabel VerticalAlignment="Top" Canvas.Top="624" Canvas.Left="641" HorizontalAlignment="Center" DetailsPageName="D540" ComponentName="540-DRY"/>
         <Labels:DetailsLabel ComponentName="520-RINSE" DetailsPageName="D520_2" Canvas.Left="340" Canvas.Top="236" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel 
+            JumpFromLabel="544-01-MA1" 
+            JumpToLabel="570-01-MA1" Canvas.Left="1061" Canvas.Top="553" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
