--- a/Prevu.Synoptics.V2868-Termoplasticos/D520_2.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/D520_2.xaml
@@ -10,10 +10,10 @@
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="276" Width="415" >
         <Labels:Pipe Width="64" StatusComponent="520-21-CV1" Color="Oil" Canvas.Left="142" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="51" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="520-24-CV1" Canvas.Left="58" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="63" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="520-23-CV1" Canvas.Left="147" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="63" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="520-24-CV1" Canvas.Left="150" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="51" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="520-23-CV1" Canvas.Left="58" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="51" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1" Canvas.Left="58" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="63" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-23-CV1" Canvas.Left="147" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="63" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1" Canvas.Left="150" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="51" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-23-CV1" Canvas.Left="58" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="113" Canvas.Top="100" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
@@ -44,26 +44,8 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="168" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="168" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="58" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="184" Canvas.Top="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
             ComponentName="520-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="13" Canvas.Top="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
