--- a/Prevu.Synoptics.V2868-Termoplasticos/P510.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/P510.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P510" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" Color="Water" StatusComponent="508-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="306" Canvas.Top="507">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" Color="Water" StatusComponent="528-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="306" Canvas.Top="507">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -50,7 +50,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="482-01-MA1" PipeHeight="Medium" Canvas.Left="349" Canvas.Top="66"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="105" Color="Water" StatusComponent="508-01-MA1" Canvas.Left="225" Canvas.Top="591"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="119" Color="Water" StatusComponent="529-01-MA1" Canvas.Left="225" Canvas.Top="591"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Color="Water" StatusComponent="510-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="440" Canvas.Top="360">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -73,11 +73,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="58" VerticalAlignment="Top" Canvas.Top="712" StatusComponent="554-01-MA1" Canvas.Left="961" HorizontalAlignment="Center" Color="Air"/>
         <Labels:Pipe Width="73" VerticalAlignment="Top" Canvas.Top="428" StatusComponent="514-01-MA1" PipeHeight="Medium" Canvas.Left="697" HorizontalAlignment="Center"/>
         <Labels:Pipe Width="66" VerticalAlignment="Top" Canvas.Top="428" StatusComponent="510-01-MA1" PipeHeight="Medium" Canvas.Left="610" HorizontalAlignment="Center"/>
-        <Labels:Pipe Width="268" VerticalAlignment="Top" Canvas.Top="581" StatusComponent="544-01-MA1" PipeHeight="Medium" Canvas.Left="793" Height="14" HorizontalAlignment="Center"/>
-        <Labels:Pipe Width="58" VerticalAlignment="Top" Canvas.Top="586" StatusComponent="544-01-MA1" Canvas.Left="679" HorizontalAlignment="Center" Color="Air"/>
+        <Labels:Pipe Width="290" VerticalAlignment="Center" Canvas.Top="581" StatusComponent="534-01-MA1" PipeHeight="Medium" Canvas.Left="793" Height="14" HorizontalAlignment="Left"/>
+        <Labels:Pipe Width="58" VerticalAlignment="Top" Canvas.Top="586" StatusComponent="534-01-MA1" Canvas.Left="679" HorizontalAlignment="Center" Color="Air"/>
         <Labels:Pipe Width="142" VisibilitySignal="" VerticalAlignment="Top" Canvas.Top="494" StatusComponent="514-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="694" Height="12" HorizontalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -88,9 +87,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="53" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="85" Canvas.Top="762"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="118" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="108" Canvas.Top="609"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="74" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="72" Canvas.Top="644">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="118" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="108" Canvas.Top="609"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="88" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="65" Canvas.Top="651">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -100,8 +98,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="141" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="85" Canvas.Top="591"/>
-        <Labels:Pipe Width="175" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Top="676" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="141" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="85" Canvas.Top="573"/>
+        <Labels:Pipe Width="319" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="-72" Canvas.Top="415" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -111,30 +109,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="141" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="85" Canvas.Top="573"/>
-        <Labels:Pipe Width="319" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="-72" Canvas.Top="415" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="349" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="85" Canvas.Top="258"/>
-        <Labels:Pipe Width="290" VerticalAlignment="Top" Canvas.Top="708" StatusComponent="554-01-MA1" PipeHeight="Medium" Canvas.Left="1089" Height="14" HorizontalAlignment="Center"/>
-        <Labels:Pipe Width="116" VisibilitySignal="" VerticalAlignment="Top" Canvas.Top="638" StatusComponent="544-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="998" Height="12" HorizontalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="107" Canvas.Top="679"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="349" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="85" Canvas.Top="258"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="52" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="107" Canvas.Top="693"/>
         <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="542" Canvas.Top="172">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -145,7 +121,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:V01_VRC_WaterTank Canvas.Left="327" Canvas.Top="522" HorizontalAlignment="Left" Height="122" VerticalAlignment="Center" Width="121" ComponentName="508-41-LT1" TrendName="LEVEL"/>
+        <Machines:V01_VRC_WaterTank Canvas.Left="327" Canvas.Top="522" HorizontalAlignment="Left" Height="122" VerticalAlignment="Center" Width="121" ComponentName="528-41-LT1" TrendName="LEVEL"/>
         <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="424" Canvas.Top="362">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -197,25 +173,13 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Rectangle HorizontalAlignment="Center" Height="46" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="223" Canvas.Top="570">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle HorizontalAlignment="Center" Height="46" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="223" Canvas.Top="570"/>
         <Machines:DRY_HeatingBattery Width="66" VerticalAlignment="Top" Canvas.Top="556" Canvas.Left="634" Height="65" HorizontalAlignment="Center"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="664" Canvas.Top="408" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:DRY_HeatingBattery Height="65" Width="66" Canvas.Left="916" Canvas.Top="682" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="953" Canvas.Top="563" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1247" Canvas.Top="690" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="914" Canvas.Top="187" Height="50" Width="50"  HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="414" Canvas.Top="172" HorizontalAlignment="Left" VerticalAlignment="Center" Width="222"/>
         <Machines:V01_DRY_DryerShutOff Canvas.Left="718" Canvas.Top="535" Height="71" Width="96" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_DRY_DryerShutOff Canvas.Left="1009" Canvas.Top="661" Height="71" Width="96" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Center" 
 		ComponentName="510-01-MA1"  Canvas.Left="649" Canvas.Top="229"/>
@@ -224,7 +188,7 @@
 		ComponentName="510-01-YA1"  Canvas.Left="649" Canvas.Top="297"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
-            ComponentName="508-41-LT1"  Canvas.Left="342" Canvas.Top="550"/>
+            ComponentName="528-41-LT1"  Canvas.Left="342" Canvas.Top="550"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="510-22-CV1"  Canvas.Left="494" Canvas.Top="386"/>
@@ -239,10 +203,10 @@
             ComponentName="510-DCE"  Canvas.Left="498" Canvas.Top="125"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="508-01-MA1"  Canvas.Left="240" Canvas.Top="626"/>
+            ComponentName="529-01-MA1"  Canvas.Left="240" Canvas.Top="626"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
-            ComponentName="508-21-CV1"  Canvas.Left="240" Canvas.Top="428"/>
+            ComponentName="528-21-CV1"  Canvas.Left="240" Canvas.Top="428"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="510-VALVE" DetailsPageName="D510" Canvas.Left="605" Canvas.Top="125"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
                       VerticalAlignment="Top" 
@@ -250,26 +214,19 @@
                       JumpToLabel="482-01-MA1" Canvas.Left="301" Canvas.Top="36"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            JumpFromLabel="508-01-MA1" 
-            JumpToLabel="520-23-CV1" Canvas.Left="136" Canvas.Top="647"/>
+            JumpFromLabel="529-01-MA1" 
+            JumpToLabel="520-23-CV1" Canvas.Left="136" Canvas.Top="661"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Center" 
 		ComponentName="510-02-MA1"  Canvas.Left="756" Canvas.Top="297"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="508-01-MA1" 
-            JumpToLabel="530-23-CV1" Canvas.Left="115" Canvas.Top="730"/>
         <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="469"  Canvas.Left="644" HorizontalAlignment="Center" ComponentName="514-01-MA1"/>
-        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="933" HorizontalAlignment="Center" ComponentName="544-01-MA1"/>
-        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="811" HorizontalAlignment="Center" ComponentName="540-21-CV1"/>
-        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="632" Canvas.Left="1230" HorizontalAlignment="Center" ComponentName="554-01-MA1"/>
-        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="632" Canvas.Left="1108" HorizontalAlignment="Center" ComponentName="550-21-CV1"/>
-        <Labels:DetailsLabel VerticalAlignment="Top" Canvas.Top="624" Canvas.Left="641" HorizontalAlignment="Center" DetailsPageName="D540" ComponentName="540-DRY"/>
-        <Labels:DetailsLabel ComponentName="550-DRY" DetailsPageName="D550" Canvas.Left="923" Canvas.Top="750" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="933" HorizontalAlignment="Center" ComponentName="534-01-MA1"/>
+        <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="811" HorizontalAlignment="Center" ComponentName="530-21-CV1"/>
+        <Labels:DetailsLabel VerticalAlignment="Top" Canvas.Top="624" Canvas.Left="641" HorizontalAlignment="Center" DetailsPageName="D530" ComponentName="530-DRY"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            JumpFromLabel="554-01-MA1" 
-            JumpToLabel="658-01-MA1" Canvas.Left="1362" Canvas.Top="679"/>
+            JumpFromLabel="534-01-MA1" 
+            JumpToLabel="570-01-MA1" Canvas.Left="1061" Canvas.Top="553"/>
         <Labels:DetailsLabel ComponentName="510-RINSE" DetailsPageName="D510_2" Canvas.Left="340" Canvas.Top="236" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
